# fitsa-app

./: .dockerignore  .env.sample  .gitignore  .replit  DEPLOY.md  Dockerfile  README_FLASK.md  app.py  credits.db  deploy.sh  design_guidelines.md  install_deps.sh  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  requirements-prod.txt  requirements.txt  saved_fits.db  start_flask.sh  test_refit_limit.py  tests.py
.github/workflows/: deploy-render.yml
attached_assets/: Pasted--0-GitHub-fitsa-app-https-github-com--1761133750589_1761133750589.txt  Pasted--PUBLISH-4-hours-ago-Show-less-Analyzed-Replit-deployment-optio-1761221815111_1761221815111.txt  Pasted--Saved-Fits--1760960945490_1760960945490.txt  Pasted--style-css-index-html-app-js--1760945821971_1760945821971.txt  Pasted--tests-py-tests-py-import-os-base64-io-time-json-request-1760811211719_1760811211719.txt  Pasted--v2-style-css-index-html-app-js--1760947477458_1760947477459.txt
client/: index.html
client/src/: App.tsx  index.css
routes/: api.py  luxury_hall.py  stripe_routes.py
server/: index.ts  objectStorage.ts  routes.ts  storage.ts  virtualFitting.ts
services/: background_removal_service.py  catvton_service.py  credits_service.py  gemini_virtual_fitting_service.py  nano_service.py  object_storage_service.py  openai_virtual_fitting_service.py  replicate_service.py  saved_fits_service.py
shared/: schema.ts
static/: index.html  script.js  script2.js  script3.js  styles.css  success.html
static/css/: luxury.css
templates/: index.html  luxury_hall.html
(+7 files in other folders)
