[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.1.2",
    "pillow>=12.0.0",
    "python-dotenv>=1.1.1",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "routes>=2.5.1",
    "openai>=2.4.0",
    "rembg>=2.0.67",
    "onnxruntime>=1.23.1",
]
